Chatter-Filters/src/objects/Chatter_Filter_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Chatter_Filter__c</fullName>
        <label>Chatter Filter</label>
        <referenceTo>Chatter_Filter__c</referenceTo>
        <relationshipName>Chatter_Filter_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Includes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Excludes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Filter Condition</label>
    <nameField>
        <displayFormat>A-{00}</displayFormat>
        <label>Chatter Filter Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filter Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>